--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -10,7 +10,7 @@ $light-text-color: #ffffff;
 $primary-text-color: #000000;
 $secondary-text-color: #545454;
 $describe-text-color: #8c8c8c;
-$active-button-color: #ff6b01;
+$active-button-color: #017cff;
 
 $bg-primary-color: #ffffff;
 $bg-secondary-color: #f7f7f7;
