--- a/src/components/shared/form/CustomInput/style.module.scss
+++ b/src/components/shared/form/CustomInput/style.module.scss
@@ -20,6 +20,7 @@
     line-height: inherit;
     padding: 8px 15px;
     margin-bottom: 21px;
+    padding-right: 75px;
 
     &::placeholder {
         color: $main-color;
