--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -13,7 +13,7 @@ $describe-text-color: #8c8c8c;
 $active-button-color: #017cff;
 
 $bg-primary-color: #ffffff;
-$bg-secondary-color: #f7f7f7;
+$bg-secondary-color: #c5c7ce;
 
 $border-radius: 5px;
 $function-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
