--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap');
 body{
   margin: 0;
   padding: 0;
   background-color: rgb(255, 255, 255);
+  font-family: 'Montserrat', sans-serif;
 }
 #app{
   height: 100vh;
