--- a/src/components/auth/LogIn/style.module.scss
+++ b/src/components/auth/LogIn/style.module.scss
@@ -17,6 +17,10 @@
     &__btn {
         margin-top: 15px;
         width: 100%;
+        border: 1px solid #0462c760;
+        border-radius: 15px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+            0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     }
 }
 .link {
