--- a/src/components/shared/form/CustomInput/style.module.scss
+++ b/src/components/shared/form/CustomInput/style.module.scss
@@ -7,23 +7,26 @@
 .line__label {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    font-size: 14px;
 }
 
 .custom-input {
     height: 40px;
     width: 100%;
-    border: 2px solid $main-color;
-    font-size: 18px;
-
+    font-size: 16px;
     outline: none;
     line-height: inherit;
     padding: 8px 15px;
-    margin-bottom: 21px;
-    padding-right: 75px;
+    margin-bottom: 30px;
+    border: 1px solid #0462c750;
+    border-radius: 15px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
 
     &::placeholder {
         color: $main-color;
+        font-size: 14px;
     }
 
     &--error {
@@ -41,7 +44,7 @@
     }
 }
 .check-box__input {
-    width: 30px;
+    width: 20px;
     margin-left: 20px;
     margin-bottom: 0;
 }
