--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -1,5 +1,40 @@
 @import "../../assets/scss/variables.scss";
 
+.drop-down_menu {
+    max-width: 28rem; /* Замість md вказано конкретне значення ширини, яке відповідає max-w-md */
+    margin-left: auto;
+    margin-right: auto;
+}
+.drop-down_title {
+    cursor: pointer;
+    height: 2.5rem;
+    background-color: #98d7df;
+    display: flex;
+    border-width: 1px;
+    border-color: #e2e8f0;
+    border-radius: 0.375rem;
+    align-items: center;
+    padding: 0.75rem;
+}
+
+.drop-down_list {
+    position: absolute;
+    border-radius: 0.375rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 0.25rem;
+    border-width: 1px;
+    border-color: #e2e8f0;
+}
+
+.chats_list {
+    height: calc(100vh - 105px);
+    overflow-y: auto;
+}
 .chat_foto {
     border-radius: 20px;
 }
@@ -17,6 +52,7 @@
     user-select: none;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
+    margin: 5px 8px;
 }
 .chat_user_box:hover {
     transform: scale(1.1);
@@ -25,6 +61,10 @@
 
 .messages_list {
     padding: 10px 20px;
+    height: calc(100vh - 200px);
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .messages_item {
