--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -68,7 +68,7 @@ main {
 }
 
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 10px;
   height: 3px;
 }
 
@@ -140,31 +140,9 @@ main {
     }
   }
 }
-
-/*-- Housekeeping --*/
-
-html {
-  box-sizing: border-box;
+div .custom-label> .filter_input {
+  margin-bottom: 0;
 }
-
-*, *:before, *:after {
-  box-sizing: inherit;
-  
-}
-
-body {
-  margin: 0;
-}
-
-#page {
-  /* min-height: 100%; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: .2s ease;
-}
-
-.padding-bottom {
-  padding-bottom: 10px;
+.active {
+  background-color: aquamarine;
 }
